--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     alt="Imagem de perfil de ArandasNyan_" 
                     class="avatar"/>
 
-                <h1 class="userName">Emmanoel Vieira</h1>
+                <h1 class="userName">Arandas Nyan</h1>
                 <p class="userMention"><a href="https://www.instagram.com/_arandas_/" class="userMention">@Arandas_Nyan</a></p>
 
                 <ul class="listLinks">
