--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Tree Links</title>
     </head>
 <!-- Sem, Purple, Dark, Orange, whiteRed -->
-    <body class="whiteRed"> <!-- Perso. Page -->
+    <body class=""> <!-- Perso. Page -->
         <div class="container">
             <div class="card">
 
