--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles.css"/>
+        <link rel="shortcut icon" href="./assets/cat.svg" type="image/x-icon">
         <title>Tree Links</title>
     </head>
 <!-- Sem, Purple, Dark, Orange, whiteRed -->
