--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles.css"/>
         <link rel="shortcut icon" href="./assets/cat.svg" type="image/x-icon">
-        <title>Tree Links</title>
+        <title>Profile Links</title>
     </head>
 <!-- Sem, Purple, Dark, Orange, whiteRed -->
     <body class=""> <!-- Perso. Page -->
